@@ -601,6 +601,31 @@ $session_name = 'SQMSESSID';
 
 
 /**
+ * Location base
+ * 
+ * This is used to build the URL to the SquirrelMail location.
+ * It should contain only the protocol and hostname/port parts
+ * of the URL; the full path will be appended automatically.
+ *
+ * If not specified or empty, it will be autodetected.
+ *
+ * Examples:
+ * http://webmail.example.org
+ * http://webmail.example.com:8080
+ * https://webmail.example.com:6691
+ *
+ * To be clear: do not include any of the path elements, so if
+ * SquirrelMail is at http://www.example.net/web/mail/src/login.php, you
+ * write: http://www.example.net
+ *
+ * @global string $config_location_base;
+ * @since 1.4.8
+ */
+$config_location_base = '';
+
+
+
+/**
  * Themes
  *   You can define your own theme and put it in this directory.
  *   You must call it as the example below. You can name the theme
